Horizontal scroll for code highlight fix

--- a/_sass/alg/_alg.scss
+++ b/_sass/alg/_alg.scss
@@ -158,6 +158,10 @@ article {
     list-style: decimal-leading-zero;
   }
   
+  pre {
+    overflow: auto;
+  }
+
   pre code {
     border: none;
     font-size: 70%;
