--- a/_sass/normalize/_normalize.scss
+++ b/_sass/normalize/_normalize.scss
@@ -161,7 +161,9 @@ samp {
  */
 
 pre {
-    white-space: pre-wrap;
+/**    Carlos have commented the next line
+ *     white-space: pre-wrap;
+ */
 }
 
 /**
